# garmin-run-analyzer

./: .env.example  .gitignore  Dockerfile  README.md  agent.py  dashboard.py  discord_bot.py  docker-compose.yml  garmin_client.py  main.py  models.py  pyproject.toml
.github/workflows/: docker.yml
